fix(security,reporting,loan,ledger): resolve review warnings and add review artifacts
- Add @PreAuthorize role guards to treasurer/admin dashboard endpoints
- Handle EmptyResultDataAccessException in ReportingAuthHelper (clean 403 vs 500)
- Apply escapeCsv() consistently in financial summary CSV export
- Guard against division-by-zero in loan repayment allocation
- Externalize CORS origins via application.yml property
- Add @Transactional to generateEntryNumber() in LedgerServiceImpl
- Add Plan 06 summary and feature review artifacts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>